# template-rfi-workflow-py

./: README.md  pyproject.toml
src/: bar.py  baz.py  foo.py
